force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/GFW_Sync_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used for GFW Sync to map GFW object to FSDB object.</description>
    <label>GFW Sync Object Mapping</label>
    <pluralLabel>GFW Sync Object Mappings</pluralLabel>
</CustomObject>