force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this object mapping is actively used in sync.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>