force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/FSDB_External_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FSDB_External_Id_Field_API_Name__c</fullName>
    <description>API Name of External ID in FSDB for this object mapping.</description>
    <label>FSDB External Id Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>