force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/FSDB_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>FSDB_Object_Name__c</fullName>
    <description>API name of mapped object in FSDB</description>
    <label>FSDB Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>