force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/GFW_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>GFW_Object_Name__c</fullName>
    <description>API name of Object in GFW db.</description>
    <label>GFW Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>