force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/PrefixExternalIds__c.field-meta.xml
<CustomField>
    <fullName>PrefixExternalIds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if External Ids are prefixed with COA (to ensure unique external Ids across FS groups).</description>
    <label>Prefix ExternalIds?</label>
    <type>Checkbox</type>
</CustomField>