force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/Sort_order__c.field-meta.xml
<CustomField>
    <fullName>Sort_order__c</fullName>
    <description>Sort order of objects to be upserted during sync, in ascending order (e.g., Accounts is 1, Contacts 2, etc.).</description>
    <label>Sort order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>