force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/SyncLogRecordLookupFieldName__c.field-meta.xml
<CustomField>
    <fullName>SyncLogRecordLookupFieldName__c</fullName>
    <description>Name in Sync Log Record of lookup field to FSDB Object.</description>
    <label>SyncLogRecordLookupFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>