force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/fields/UpsertNewOnly__c.field-meta.xml
<CustomField>
    <fullName>UpsertNewOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the sync should only populate/seed new records and not update existing records.</description>
    <label>Upsert New Only?</label>
    <type>Checkbox</type>
</CustomField>