force-app/main/default/objects/GFW_Sync_Object_Mapping__mdt/listViews/All_custom.listView-meta.xml
<ListView>
    <fullName>All_custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Sort_order__c</columns>
    <columns>FSDB_Object_Name__c</columns>
    <columns>GFW_Object_Name__c</columns>
    <columns>FSDB_External_Id_Field_API_Name__c</columns>
    <columns>SyncLogRecordLookupFieldName__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All custom</label>
    <language>en_US</language>
</ListView>